# dubber-pro

./: .env  .gitignore  README.md  dubberpro.spec  main.py  pyproject.toml
engine/native/: CMakeLists.txt  engine.cpp
src/: config.py  main.py
src/dubber_pro/: dubber_pro.py
src/modules/: dubber.py  phases.py  pipeline.py  resources.py
src/ui/: utils.py  window.py  worker.py
src/ui/components/: console.py  header.py  selection.py
styles/: main.qss
