[project]
name = "dubber-pro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "edge-tts>=7.2.7",
    "librosa>=0.11.0",
    "moviepy>=2.2.1",
    "openai-whisper>=20250625",
    "pydub>=0.25.1",
    "pyqt6>=6.10.2",
    "sacremoses>=0.1.1",
    "sentencepiece>=0.2.1",
    "soundfile>=0.13.1",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.6",
]
